--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 			<ol class="carousel-indicators">
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 			</ol>
 		 
 			<!-- Wrapper for slides -->
@@ -120,6 +121,9 @@
 				</div>
 				<div class="item">
 					<img src="visitor/images/3.jpg" alt="..." style="width:100%">
+                </div>
+                <div class="item">
+					<img src="visitor/images/4.png" alt="..." style="width:100%">
 				</div>
 			</div>
 		 
@@ -159,7 +163,7 @@ ___________________________________________________________ fin header start bod
 				<div class="panel-heading">
 					<h3 class="panel-title">our level system</h3>
 				</div>
-				<div class="panel-body">Contenu</div>
+				<div class="panel-body"><img src="visitor/images/cefr-english-language-levels.png" alt="..." style="width:100%"></div>
 				<div class="panel-footer">Pied de panneau <br/>lsjfs;adf;jsaflk;asf<br>kldkdkkeifreowif  sldflsij sdkjflsajfi sfjlsdj lsfsdl</div>
 			</div>
 			
