--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@ ___________________________________________________________ fin header start bod
 		<div class="col-md-4">
 			<div class="panel panel-primary ">
 				<div class="panel-heading">
-					<h3 class="panel-title">our level system</h3>
+					<h3 class="panel-title">About the Common European Framework of Reference for Languages</h3>
 				</div>
 				<div class="panel-body"><img src="visitor/images/cefr-english-language-levels.png" alt="..." style="width:100%"></div>
-				<div class="panel-footer">Pied de panneau <br/>lsjfs;adf;jsaflk;asf<br>kldkdkkeifreowif  sldflsij sdkjflsajfi sfjlsdj lsfsdl</div>
+				<div class="panel-footer">At GSL, we base our classing on the Common European Framework of Reference for Languages (CEFR) to differentiate levels of ability for the English language. 
+                    To ensure that you are placed in a class with other students of a similar English ability, we sub-divide the CEFR levels. Our experience is that students learn more quickly and more efficiently if placed in a class with other students of a similar English level; no one is left behind and no one is held back.</div>
 			</div>
 			
 		</div>
@@ -190,7 +191,20 @@ ___________________________________________________________ fin header start bod
 			
 		</div>
 
-	</div>
+    </div>
+    <div class="row">
+		<div class="">
+			<div class="panel panel-primary ">
+				<div class="panel-heading">
+					<h3 class="panel-title">About the Common European Framework of Reference for Languages</h3>
+				</div>
+				<div class="panel-body"><img src="visitor/images/cefr-english-language-levels.png" alt="..." style="width:100%"></div>
+				<div class="panel-footer">At GSL, we base our classing on the Common European Framework of Reference for Languages (CEFR) to differentiate levels of ability for the English language. 
+                    To ensure that you are placed in a class with other students of a similar English ability, we sub-divide the CEFR levels. Our experience is that students learn more quickly and more efficiently if placed in a class with other students of a similar English level; no one is left behind and no one is held back.</div>
+			</div>
+			
+        </div>
+    </div>
 
 	<hr/>
 
