--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@ ___________________________________________________________ fin body start foote
     <hr>
     <div id='contact' class="row">
         <div class="col-md-4">
-            <p>Copyright 2015 - <a href="http://www.365bootstrap.com" target="_blank">Bootstrap Themes</a> Designed by 365Bootstrap.com</p>
+            <p>Copyright 2018 - global school</p>
         </div>
         <div class="col-md-4">
             <ul class="list-inline social-buttons">
                 <li><a href="#"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li><a href="https://www.facebook.com/365bootstrap"><i class="fa fa-facebook"></i></a>
+                <li><a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li><a href="#"><i class="fa fa-linkedin"></i></a>
                 </li>
@@ -299,10 +299,10 @@ ___________________________________________________________ fin body start foote
         </div>
         <div class="col-md-4">
             <ul class="list-inline quicklinks">
-                <li><i class="fa fa-phone"></i>0</li><br>
-                <li><i class="fa fa-phone"></i>1</li><br>
-                <li><i class="fa fa-envelope"></i>1</li><br>
-                <li><i class="fa fa-map-marker"></i>1</li>
+                <li><i class="fa fa-phone"></i>+213 00 00 00 00</li><br>
+                <li><i class="fa fa-phone"></i>+213 00 00 00 00</li><br>
+                <li><i class="fa fa-envelope"></i>email@gmail.com</li><br>
+                <li><i class="fa fa-map-marker"></i>jijel - ayouf</li>
             </ul>
         </div>
     </div>
